// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`布局Row快照测试 gutter = 8 1`] = `
<div
  className="sc-bdnylx JBKaK sinoui-row"
/>
`;

exports[`布局Row快照测试 gutterType = "around" 1`] = `
<div
  className="sc-bdnylx eZKXrS sinoui-row"
/>
`;

exports[`布局Row快照测试 justifyContent = "center" alignItems="center" 1`] = `
<div
  className="sc-bdnylx hlYXSm sinoui-row"
/>
`;

exports[`布局Row快照测试 justifyContent="center" 1`] = `
<div
  className="sc-bdnylx iNmtfP sinoui-row"
/>
`;

exports[`布局Row快照测试 默认 1`] = `
<div
  className="sc-bdnylx diNnwK sinoui-row"
/>
`;
